# skypro_drf

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
lms/: custom_email_backend.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_preview.py  0003_course_owner_lesson_owner_subscription.py
users/: filters.py  models.py  permissions.py  serializers.py  test_views.py  urls.py  views.py
users/fixtures/: groups.json  payments.json
users/migrations/: 0001_initial.py  0002_payment.py
